--- a/components/SideNavBar.module.scss
+++ b/components/SideNavBar.module.scss
@@ -3,7 +3,7 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    height: 100%;
+    height: max(100%, 100vh);
     width: 56px;
     background-color: #ffffff;
   }
